--- a/app/views/pages/busqueda.html.haml
+++ b/app/views/pages/busqueda.html.haml
@@ -13,7 +13,7 @@
           #myTabContent.tab-content
             #grid-container.tab-pane.active
               .category-product.inner-top-vs
-                - if @message.nil?
+                - if @result.nil?
                   .row
                     %h2 CAMIONES
                     = render partial: 'shared/list_trucks'
@@ -29,5 +29,5 @@
                 - else
                   .row
                     %h2
-                      = @message.to_s
+                      = @result.to_s
 
